Add Lesson 1 Subject

--- a/JavaScript-and-The-DOM/lesson1.html
+++ b/JavaScript-and-The-DOM/lesson1.html
@@ -6,7 +6,8 @@
     </head>
 
     <body>
-        <h1> Hello Lesson 1 </h1>
+        <h1> Hello Lesson 1 (Syntax) </h1>
+
 
         <a href="https://classroom.udacity.com/nanodegrees/nd001-mena-nfp2/parts/f3a5692d-ea43-4327-991f-5cb3f7186e1c"
             target="_blank">JavaScript and The DOM</a>
