Add JS & the DOM files

--- a/JS-and-the-DOM/lesson5.html
+++ b/JS-and-the-DOM/lesson5.html
@@ -6,12 +6,13 @@
     </head>
 
     <body>
-        <h1 id="headline"> Hello Lesson 2 (The Document Object Model) </h1>
+        <h1> Hello </h1>
+        <h2> Lesson 5 (Performance) </h2>
 
         <a href="https://classroom.udacity.com/nanodegrees/nd001-mena-nfp2/parts/f3a5692d-ea43-4327-991f-5cb3f7186e1c"
             target="_blank">JavaScript and The DOM</a>
 
-        <script src="js/lesson2.js"></script>
+        <script src="js/lesson5.js"></script>
     </body>
 
 </html>
