--- a/Web-APIs-and-Asynchronous/client-and-server-sides/website/index.html
+++ b/Web-APIs-and-Asynchronous/client-and-server-sides/website/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Title</title>
   </head>
 
@@ -10,10 +9,26 @@
     <div id="app">
       Hello World
     </div>
-    <script src="app.js" type="text/javascript"></script>
-    <script src="tests.js" type="text/javascript"></script>
-    <script src="getPost.js" type="text/javascript"></script>
+    <label for="animal">Enter the name of your favorite animal</label>
+    <input id="animal" name="animal" />
+    <textarea
+      id="favorite"
+      placeholder="Enter your favorite thing about your favorite animal"
+      rows="9"
+      cols="50"
+    ></textarea>
+    <button id="generate">GO</button>
 
+    <div>
+      <h1 id="animalName"></h1>
+      <h2 id="animalFact"></h2>
+      <h3 id="animalFav"></h3>
+    </div>
+
+    <!-- <script src="app.js" type="text/javascript"></script> -->
+    <!-- <script src="tests.js" type="text/javascript"></script> -->
+    <!-- <script src="getPost.js" type="text/javascript"></script> -->
+    <!-- <script src="animal.js" type="text/javascript"></script> -->
+    <script src="animalData.js" type="text/javascript"></script>
   </body>
-
 </html>
